# docs/openapi3.yaml
@@ -32,6 +32,46 @@ paths:
       summary: GetAllAlbums
       tags:
         - album
+  "/albums/{album_id}/musicians":
+    get:
+      description: get musician by album id
+      parameters:
+        - description: album id
+          in: path
+          name: album_id
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/github_com_hanoys_sigma-music_internal_adapters_del\
+                  ivery_api_dto.MusicianDTO"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/internal_adapters_delivery_api.RestErrorBadRequest"
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/internal_adapters_delivery_api.RestErrorNotFound"
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/internal_adapters_delivery_api.RestErrorInternalErr\
+                  or"
+      summary: GetByAlbumID
+      tags:
+        - musician
   "/albums/{id}":
     get:
       description: get album by id
@@ -672,6 +712,66 @@ paths:
       summary: DeleteTrack
       tags:
         - track
+  /musicians/me/albums:
+    get:
+      description: get own albums
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/github_com_hanoys_sigma-music_internal_adapters_del\
+                  ivery_api_dto.AlbumDTO"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/internal_adapters_delivery_api.RestErrorBadRequest"
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/internal_adapters_delivery_api.RestErrorNotFound"
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/internal_adapters_delivery_api.RestErrorInternalErr\
+                  or"
+      security:
+        - ApiKeyAuth: []
+      summary: GetOwn
+      tags:
+        - album
+  /musicians/me/tracks:
+    get:
+      description: get own tracks
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: "#/components/schemas/github_com_hanoys_sigma-music_internal_adapters_del\
+                    ivery_api_dto.TrackDTO"
+                type: array
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/internal_adapters_delivery_api.RestErrorInternalErr\
+                  or"
+      security:
+        - ApiKeyAuth: []
+      summary: getOwn
+      tags:
+        - track
   /musicians/register:
     post:
       description: registration
@@ -972,6 +1072,46 @@ paths:
       summary: SetGenresForTrack
       tags:
         - genre
+  "/tracks/{track_id}/musicians":
+    get:
+      description: get musician by track id
+      parameters:
+        - description: track id
+          in: path
+          name: track_id
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/github_com_hanoys_sigma-music_internal_adapters_del\
+                  ivery_api_dto.MusicianDTO"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/internal_adapters_delivery_api.RestErrorBadRequest"
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/internal_adapters_delivery_api.RestErrorNotFound"
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/internal_adapters_delivery_api.RestErrorInternalErr\
+                  or"
+      summary: GetByTrackID
+      tags:
+        - musician
   /users:
     get:
       description: get all users
@@ -1067,7 +1207,9 @@ paths:
               schema:
                 $ref: "#/components/schemas/internal_adapters_delivery_api.RestErrorInternalErr\
                   or"
-      summary: GetCommentByUserID
+      security:
+        - ApiKeyAuth: []
+      summary: GetUsersComments
       tags:
         - comment
   /users/me/favorites:
@@ -1121,8 +1263,15 @@ paths:
       tags:
         - track
   "/users/me/favorites/{id}":
-    put:
+    post:
       description: add track to user favorites
+      parameters:
+        - description: track id
+          in: path
+          name: id
+          required: true
+          schema:
+            type: string
       responses:
         "200":
           description: OK
